--- a/week05/app/src/main/AndroidManifest.xml
+++ b/week05/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Week05">
         <activity
-            android:name=".MainActivity"
+            android:name=".WriteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplachActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
